# StockTrader

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  PROJECT_PLAN.md  PROJECT_PLAN_2.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: twquant.db
data/sample/: twse_0050_sample.csv  twse_2317_sample.csv  twse_2330_sample.csv
docker/: crontab  entrypoint.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DATA_DICTIONARY.md  DEPLOYMENT.md  PERFORMANCE_REPORT.md  STRATEGIES.md  TESTING_STRATEGY.md  system_guide.html
rust/: Cargo.toml
rust/twquant-core/: Cargo.toml
rust/twquant-core/src/: errors.rs  lib.rs  validation.rs
rust/twquant-ml/: Cargo.toml
rust/twquant-ml/src/: lib.rs
scripts/: ai_backtest_verify.py  ai_trend_pick_20260513.py  benchmark_rust.py  continuous_sync.sh  profile_memory.py  scheduled_sync.py  seed_data.py  verify_bulk_fetch.py
src/twquant/: constants.py
src/twquant/backtest/: benchmark.py  cost_model.py  engine.py  portfolio.py  report.py
src/twquant/dashboard/: app.py  config.py
src/twquant/data/: alert_worker.py  alerts.py  auto_sync.py  basket.py  daily_scan_worker.py  daily_scans.py  ex_dividend_filter.py  funnel_presets.py  rankings.py  resampler.py  sanity.py  split_adjust.py  storage.py  sync_config.py  sync_engine.py  sync_jobs.py  (+2 more)
tests/python/: test_backtest_engine.py  test_ex_dividend.py  test_indicators.py  test_rust_bridge.py  test_sanity_checker.py  test_sync_engine.py
(+49 files in other folders)
