[project]
name = "twquant"
version = "0.1.0"
description = "台股量化交易平台"
authors = [
    {name = "StevenChou",email = "60497847+chousir@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.57.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "pandas (>=2.2,<3)",
    "numpy (>=2.4.4,<3.0.0)",
    "finmind (>=1.9.9,<2.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "arcticdb (>=6.14.0,<7.0.0)",
    "vectorbt (>=1.0.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "streamlit-searchbox (>=0.1.24,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "memray (>=1.19.3,<2.0.0)"
]
